--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ body{
 	text-shadow: 0 1px #fff;
 	border-top: 4px solid #f0f0f0;
 }
+*{
+	-webkit-text-size-adjust: 100%;
+}
 a{
 	color: #7094B8;
 	text-decoration: none;
@@ -29,7 +32,7 @@ a:hover{
 }
 h1{
 	color: #546f8a;
-	margin: 0;
+	margin: 0 0 10px;
 	padding: 0 10px;
 	text-transform: lowercase;
 	font-weight: normal;
@@ -73,6 +76,16 @@ h1{
 #events-list a time{
 	color: #546f8a;
 	margin-right: 4px;
+}
+@media screen and (max-width: 648px){
+	body{
+		padding: 0;
+	}
+	.col{
+		float: none;
+		width: auto;
+		margin: 0;
+	}
 }
 </style>
 <header>
