--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@ h1{
 <section>
 <h1>About</h1>
 <p>This is a collaborative effort to aggregate all things tech in Malaysia, heavily inspired by <a href="http://connections.sg/">connections.sg</a>. Also for the purpose of promoting synergy, connections &amp; community spirit.</p>
-<p>Curated &amp; maintained by <a href="http://twitter.com/cheeaun">Chee Aun</a>. Feedback &amp; contributions are <a href="https://docs.google.com/document/d/1IqH1yfNiIU_JrWrB2lPf7Ow1Z0rRaHSJNIxo-VzeXPk/edit?hl=en">welcomed</a>.</p>
+<p>Curated &amp; maintained by <a href="http://twitter.com/cheeaun">Chee Aun</a>. <a href="https://docs.google.com/document/d/1IqH1yfNiIU_JrWrB2lPf7Ow1Z0rRaHSJNIxo-VzeXPk/edit?hl=en">Feedback</a> &amp; <a href="https://github.com/cheeaun/connectionsmy">contributions</a> are welcomed.</p>
+<p>Powered by <a href="http://code.google.com/appengine/">Google App Engine</a>. <a href="http://www.google.com/webfonts/family?family=Amaranth">Amaranth</a> fonted.</p>
 </section>
 </aside>
 
@@ -245,14 +246,15 @@ h1{
 				var d = s.replace(/\D/g, ' ').split(' ');
 				return new Date(d[0], d[1]-1, d[2], d[3], d[4], d[5]);
 			},
+			yqlPath = 'http://query.yahooapis.com/v1/public/yql?format=json&_maxage=86400&',
 			eventsList = $('events-list'),
 			eventsSource = 'https://www.google.com/calendar/feeds/vjf62q7llp8mktsold1m5dmh9g%40group.calendar.google.com/public/full-noattendees?orderby=starttime&sortorder=a&futureevents=true&alt=jsonc',
 			eventsYQL = "select title,details,alternateLink, when from json where url='" + eventsSource + "' and itemPath='json.data.items' limit 5",
-			eventsURL = 'http://query.yahooapis.com/v1/public/yql?q=' + encodeURIComponent(eventsYQL) + '&format=json&_maxage=86400&callback=loadEvents',
+			eventsURL = yqlPath + 'q=' + encodeURIComponent(eventsYQL) + '&callback=loadEvents',
 			headlinesList = $('headlines-list'),
 			headlinesSource = 'http://feedstitch.com/cheeaun/connectionsmy.rss',
 			headlinesYQL = "select title,link from feed where url='" + headlinesSource + "' limit 10",
-			headlinesURL = 'http://query.yahooapis.com/v1/public/yql?q=' + encodeURIComponent(headlinesYQL) + '&format=json&_maxage=86400&callback=loadHeadlines';
+			headlinesURL = yqlPath + 'q=' + encodeURIComponent(headlinesYQL) + '&callback=loadHeadlines';
 		
 		$script(eventsURL, 'loadEvents', function(q){
 			if (!q || !q.query || !q.query.count) return;
