Added few mentionables.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ h1{
 	<li><a href="http://www.bytebot.net/">Colin Charles</a></li>
 	<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
 	<li><a href="http://yoonkit.blogspot.com/">Yong Yoon Kit</a></li>
+	<li><a href="http://about.me/ikhwan.nazri">Ikhwan Nazri</a></li>
 </ul>
 </section>
 
@@ -153,6 +154,7 @@ h1{
 	<li><a href="http://www.buyot.org/">Nazrul Kamaruddin</a></li>
 	<li><a href="http://www.bernie-eng.com/">Bernie Eng</a></li>
 	<li><a href="http://www.kriskhaira.com/">Kris Khaira</a></li>
+	<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
 </ul>
 </section>
 
@@ -180,6 +182,7 @@ h1{
 	<li><a href="http://groups.google.com/group/malaysia-rb">Malaysia Ruby Brigade</a></li>
 	<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
 	<li><a href="http://www.technopreneurs.my">Technopreneurs Association of Malaysia</a></li>
+	<li><a href="http://www.my-jug.org/">Malaysian Java User Group</a></li>
 </ul>
 </section>
 
@@ -199,6 +202,8 @@ h1{
 	<li><a href="http://incubator.com.my/">MAD Incubator</a></li>
 	<li><a href="http://www.teakcapital.com.my/">TeakCapital</a></li>
 	<li><a href="http://www.cradle.com.my/">Cradle</a></li>
+	<li><a href="http://www.vic.org.my/">Virtuous Investment Circle</a></li>
+	<li><a href="http://www.mavcap.com/">Mavcap</a></li>
 </ul>
 </section>
 
@@ -208,9 +213,10 @@ h1{
 	<li><a href="http://www.mindvalley.com/">Mindvalley</a></li>
 	<li><a href="http://youthasia.com/">Youth Asia</a></li>
 	<li><a href="http://groupsmore.com/">GroupsMore</a></li>
-	<li><a href="http://www.highrise.my/">HighRise</a></li>
+	<li><a href="http://www.highrise.my/">Highrise</a></li>
 	<li><a href="http://www.jomsocial.com/">JomSocial</a></li>
 	<li><a href="http://www.wootfood.com/">Wootfood</a></li>
+	<li><a href="http://www.aflexi.net/">Aflexi</a></li>
 </ul>
 </section>
 </div>
