--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@ h1{
 
 <script>
 (function(w, d){
+	var _gaq = [['_setAccount', 'UA-24191027-1'], ['_trackPageview']];
+	var ga = d.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	
 	var $ = function(id){return d.getElementById(id)},
 		$h = d.head || d.getElementsByTagName('head')[0],
 		$insert = function(el){
