New names and links.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ h1{
 	<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
 	<li><a href="http://yoonkit.blogspot.com/">Yong Yoon Kit</a></li>
 	<li><a href="http://about.me/ikhwan.nazri">Ikhwan Nazri</a></li>
+	<li><a href="http://aizatto.com/">Aizat Faiz</a></li>
+	<li><a href="http://www.shaolintiger.com/">Gareth Davies</a></li>
 </ul>
 </section>
 
@@ -141,7 +143,6 @@ h1{
 <ul>
 	<li><a href="http://mikefoong.com/">Mike Foong</a></li>
 	<li><a href="http://entrepreneurs.my/">Daniel Cerventus</a></li>
-	<li><a href="http://aizatto.com/">Aizat Faiz</a></li>
 </ul>
 </section>
 
@@ -155,6 +156,7 @@ h1{
 	<li><a href="http://www.bernie-eng.com/">Bernie Eng</a></li>
 	<li><a href="http://www.kriskhaira.com/">Kris Khaira</a></li>
 	<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
+	<li><a href="http://shuj.in/">Jinny Wong</a></li>
 </ul>
 </section>
 
@@ -190,7 +192,7 @@ h1{
 <h1>Spaces</h1>
 <ul>
 	<li><a href="http://www.hackerspace.my/">Hackerspace KL</a></li>
-	<li><a href="http://twitter.com/fluentspace">Fluent Space</a></li>
+	<li><a href="http://www.fluentspace.my/">Fluent Space</a></li>
 	<li><a href="http://www.paperandtoast.com/">Paper + Toast</a></li>
 </ul>
 </section>
