GA not working, probably because of this.

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ h1{
 
 <script>
 (function(w, d){
-	var _gaq = [['_setAccount', 'UA-24191027-1'], ['_trackPageview'], ['_trackPageLoadTime']];
+	w._gaq = [['_setAccount', 'UA-24191027-1'], ['_trackPageview'], ['_trackPageLoadTime']];
 	var ga = d.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 	var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
