webcamp.my and python.my

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ h1{
 <section>
 <h1>Groups, Lists &amp; Meetups</h1>
 <ul>
-	<li><a href="http://www.facebook.com/home.php?sk=group_179139768764782">WebCamp KL</a></li>
+	<li><a href="http://webcamp.my/">WebCamp KL</a></li>
 	<li><a href="http://mycocoaheads.tumblr.com/">CocoaHeads Malaysia</a></li>
 	<li><a href="http://www.hackerspace.my/">Hackerspace KL</a></li>
 	<li><a href="http://www.codeandroid.my/">CodeAndroid Malaysia</a></li>
@@ -185,6 +185,7 @@ h1{
 	<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
 	<li><a href="http://www.technopreneurs.my">Technopreneurs Association of Malaysia</a></li>
 	<li><a href="http://www.my-jug.org/">Malaysian Java User Group</a></li>
+	<li><a href="http://python.my/">Malaysia Python User Group</a></li>
 </ul>
 </section>
 
