--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ h1{
 	<li><a href="http://groups.google.com/group/malaysia-rb">Malaysia Ruby Brigade</a></li>
 	<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
 	<li><a href="http://www.technopreneurs.my">Technopreneurs Association of Malaysia</a></li>
-	<li><a href="http://www.my-jug.org/">Malaysian Java User Group</a></li>
+	<li><a href="http://jug.my/">jug.my</a></li>
 	<li><a href="http://python.my/">Malaysia Python User Group</a></li>
 </ul>
 </section>
