--- a/index.html
+++ b/index.html
@@ -287,15 +287,16 @@ h1{
 			if (Object.prototype.toString.call(d) !== '[object Date]' || isNaN(+d)) d = new Date(s.replace(/-/g, '/'));
 			return d;
 		},
+		cacheBust = Math.round((+new Date())/1000/60/60),
 		yqlPath = 'http://query.yahooapis.com/v1/public/yql?format=json&_maxage=86400&',
 		eventsList = $('events-list'),
 		eventsSource = 'https://www.google.com/calendar/feeds/calendata%40gmail.com/public/full-noattendees?orderby=starttime&sortorder=a&futureevents=true&max-results=5&alt=jsonc',
 		eventsYQL = "select title,details,alternateLink, when from json where url='" + eventsSource + "' and itemPath='json.data.items'",
-		eventsURL = yqlPath + 'q=' + encodeURIComponent(eventsYQL) + '&callback=loadEvents',
+		eventsURL = yqlPath + 'q=' + encodeURIComponent(eventsYQL) + '&callback=loadEvents&_=' + cacheBust,
 		headlinesList = $('headlines-list'),
 		headlinesSource = 'http://feedstitch.com/cheeaun/connectionsmy.rss',
 		headlinesYQL = "select title,link from feed where url='" + headlinesSource + "' limit 10",
-		headlinesURL = yqlPath + 'q=' + encodeURIComponent(headlinesYQL) + '&callback=loadHeadlines',
+		headlinesURL = yqlPath + 'q=' + encodeURIComponent(headlinesYQL) + '&callback=loadHeadlines&_=' + cacheBust,
 		l = d.createElement('link');
 	
 	l.rel = 'stylesheet';
