Cleaning up, fork badge.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ h1{
 <ul>
 	<li><a href="http://mikefoong.com/">Mike Foong</a></li>
 	<li><a href="http://entrepreneurs.my/">Daniel Cerventus</a></li>
+	<li><a href="http://lightyoruichi.com/">Harinder Singh</a></li>
 </ul>
 </section>
 
@@ -197,20 +198,21 @@ h1{
 
 <div class="col">
 <section>
-<h1>Groups, Lists &amp; Meetups</h1>
+<h1>Groups, Lists, Meetups &amp; Events</h1>
 <ul>
 	<li><a href="http://webcamp.my/">WebCamp KL</a></li>
 	<li><a href="http://mycocoaheads.tumblr.com/">CocoaHeads Malaysia</a></li>
 	<li><a href="http://www.hackerspace.my/">Hackerspace KL</a></li>
 	<li><a href="http://www.codeandroid.my/">CodeAndroid Malaysia</a></li>
 	<li><a href="http://smckl.org/">Social Media Club KL</a></li>
-	<li><a href="http://urekaweekend.com/">Urekaweekend</a></li>
+	<li><a href="http://www.makeweekend.com/">Makeweekend</a></li>
 	<li><a href="http://www.gtugkl.org/">GTUG KL</a></li>
 	<li><a href="http://groups.google.com/group/malaysia-rb">Malaysia Ruby Brigade</a></li>
+	<li><a href="http://www.technopreneur.my">Technopreneurs Association of Malaysia</a></li>
 	<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
-	<li><a href="http://www.technopreneurs.my">Technopreneurs Association of Malaysia</a></li>
 	<li><a href="http://jug.my/">jug.my</a></li>
 	<li><a href="http://python.my/">Malaysia Python User Group</a></li>
+	<li><a href="http://hack.weekend.my/">Hackweekend</a></li>
 </ul>
 </section>
 
@@ -235,19 +237,6 @@ h1{
 	<li><a href="http://allstars.my/">AllStars!</a></li>
 </ul>
 </section>
-
-<section>
-<h1>Startups</h1>
-<ul>
-	<li><a href="http://www.mindvalley.com/">Mindvalley</a></li>
-	<li><a href="http://youthasia.com/">Youth Asia</a></li>
-	<li><a href="http://groupsmore.com/">GroupsMore</a></li>
-	<li><a href="http://www.highrise.my/">Highrise</a></li>
-	<li><a href="http://www.jomsocial.com/">JomSocial</a></li>
-	<li><a href="http://www.wootfood.com/">Wootfood</a></li>
-	<li><a href="http://www.aflexi.net/">Aflexi</a></li>
-</ul>
-</section>
 </div>
 
 <aside class="col">
@@ -255,9 +244,11 @@ h1{
 <h1>About</h1>
 <p>This is a collaborative effort to aggregate all things tech in Malaysia, heavily inspired by <a href="http://connections.sg/">connections.sg</a>. Also for the purpose of promoting synergy, connections &amp; community spirit.</p>
 <p>Curated &amp; maintained by <a href="http://twitter.com/cheeaun">Chee Aun</a>. <a href="https://docs.google.com/document/d/1IqH1yfNiIU_JrWrB2lPf7Ow1Z0rRaHSJNIxo-VzeXPk/edit?hl=en">Feedback</a> &amp; <a href="https://github.com/cheeaun/connectionsmy">contributions</a> are welcomed.</p>
-<p>Powered by <a href="http://code.google.com/appengine/">Google App Engine</a>. <a href="http://www.google.com/webfonts/family?family=Amaranth">Amaranth</a> fonted.</p>
+<p><a href="http://www.google.com/webfonts/family?family=Amaranth">Amaranth</a> fonted.</p>
 </section>
 </aside>
+
+<a href="https://github.com/cheeaun/connectionsmy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
 
 <script>
 (function(w, d){
