--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>connections.my</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width; initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body{
 	font-family: 'Amaranth', 'Trebuchet MS', arial, serif;
