--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ h1{
 	<li><a href="http://www.hackerspace.my/">Hackerspace KL</a></li>
 	<li><a href="http://www.fluentspace.my/">Fluent Space</a></li>
 	<li><a href="http://www.paperandtoast.com/">Paper + Toast</a></li>
+	<li><a href="http://www.altspacekl.com/">Alt.space</a></li>
 </ul>
 </section>
 
