--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ h1{
 	<li><a href="http://python.my/">Malaysia Python User Group</a></li>
 	<li><a href="http://hack.weekend.my/">Hackweekend</a></li>
 	<li><a href="https://www.facebook.com/groups/248687618521952/">WCKL Co-Working Heroes</a></li>
+	<li><a href="https://sea.dosomething.gd">Social Enterprise Alliance Malaysia</a></li>
 </ul>
 </section>
 
@@ -232,13 +233,16 @@ h1{
 <ul>
 	<li><a href="http://greyattic.com/">Grey Attic</a></li>
 	<li><a href="http://incubator.com.my/">MAD Incubator</a></li>
-	<li><a href="http://www.teakcapital.com.my/">TeakCapital</a></li>
+	<li><a href="http://www.teakcapital.com.my/">Teak Capital</a></li>
 	<li><a href="http://www.cradle.com.my/">Cradle</a></li>
 	<li><a href="http://www.vic.org.my/">Virtuous Investment Circle</a></li>
 	<li><a href="http://www.mavcap.com/">Mavcap</a></li>
 	<li><a href="http://allstars.my/">AllStars!</a></li>
 	<li><a href="http://ch-investments.com.sg/">Crystal Horse Investments</a></li>
-
+	<li><a href="http://tandemfund.org">Tandem Fund</a></li>
+	<li><a href="http://www.mdv.com.my/v2/">Malaysia Debt Ventures</a></li>
+	<li><a href="http://www.mtdc.com.my/">Malaysia Technology Development Corporation</a></li>
+	<li><a href="http://www.modalperdana.com/">Kumpulan Modal Perdana</a></li>
 </ul>
 </section>
 </div>
