--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@ h1{
 	<li><a href="http://www.fluentspace.my/">Fluent Space</a></li>
 	<li><a href="http://www.paperandtoast.com/">Paper + Toast</a></li>
 	<li><a href="http://www.altspacekl.com/">Alt.space</a></li>
+	<li><a href="http://nook.my/">Nook</a></li>
 </ul>
 </section>
 
