--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ h1{
 	<li><a href="http://www.paperandtoast.com/">Paper + Toast</a></li>
 	<li><a href="http://www.altspacekl.com/">Alt.space</a></li>
 	<li><a href="http://nook.my/">Nook</a></li>
+	<li><a href="http://www.urbanvillage.my/">Urban Village</a></li>
 </ul>
 </section>
 
