Added WebCampKL Open Coffee Club, IxDA KL, KL Mongo User Group, hackr|backr, Rocket Internet

--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@ h1{
 	<li><a href="http://hack.weekend.my/">Hackweekend</a></li>
 	<li><a href="https://www.facebook.com/groups/248687618521952/">WCKL Co-Working Heroes</a></li>
 	<li><a href="https://sea.dosomething.gd">Social Enterprise Alliance Malaysia</a></li>
+	<li><a href="http://www.facebook.com/opencoffeeclubkl">WebCampKL Open Coffee Club</a></li>
+	<li><a href="http://www.facebook.com/groups/ixdakl/">IxDA Kuala Lumpur</a></li>
+	<li><a href="http://www.facebook.com/groups/klmug/">Kuala Lumpur Mongo User Group</a></li>
 </ul>
 </section>
 
@@ -225,6 +228,8 @@ h1{
 	<li><a href="http://www.fluentspace.my/">Fluent Space</a></li>
 	<li><a href="http://www.paperandtoast.com/">Paper + Toast</a></li>
 	<li><a href="http://www.altspacekl.com/">Alt.space</a></li>
+	<li><a href="http://nook.my/">Nook</a></li>
+	<li><a href="http://www.urbanvillage.my/">Urban Village</a></li>
 </ul>
 </section>
 
@@ -243,6 +248,8 @@ h1{
 	<li><a href="http://www.mdv.com.my/v2/">Malaysia Debt Ventures</a></li>
 	<li><a href="http://www.mtdc.com.my/">Malaysia Technology Development Corporation</a></li>
 	<li><a href="http://www.modalperdana.com/">Kumpulan Modal Perdana</a></li>
+	<li><a href="http://hackrbackr.org/">hackr|backr</a></li>
+	<li><a href="http://www.rocket-internet.my">Rocket Internet</a></li>
 </ul>
 </section>
 </div>
