--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ h1{
 	<li><a href="http://www.facebook.com/opencoffeeclubkl">WebCampKL Open Coffee Club</a></li>
 	<li><a href="http://www.facebook.com/groups/ixdakl/">IxDA Kuala Lumpur</a></li>
 	<li><a href="http://www.facebook.com/groups/klmug/">Kuala Lumpur Mongo User Group</a></li>
+	<li><a href="http://www.facebook.com/groups/drupalmy/">Drupal Malaysia</a></li>
 </ul>
 </section>
 
