Added my details

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ h1{
 	<li><a href="http://www.kriskhaira.com/">Kris Khaira</a></li>
 	<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
 	<li><a href="http://shuj.in/">Jinny Wong</a></li>
+	<li><a href="http://zerply.com/claytonnarcis">Clayton Narcis</a></li>
 </ul>
 </section>
 
