Add Ascension Lab.

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@ h1{
 	<li><a href="http://www.modalperdana.com/">Kumpulan Modal Perdana</a></li>
 	<li><a href="http://hackrbackr.org/">hackr|backr</a></li>
 	<li><a href="http://www.rocket-internet.my">Rocket Internet</a></li>
+	<li><a href="http://www.ascensionlab.com/">Ascension Lab</a></li>
 </ul>
 </section>
 </div>
