--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ h1{
 	<li><a href="http://www.technopreneur.my">Technopreneurs Association of Malaysia</a></li>
 	<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
 	<li><a href="http://jug.my/">jug.my</a></li>
-	<li><a href="http://python.my/">Malaysia Python User Group</a></li>
+	<li><a href="http://https://www.facebook.com/groups/python.malaysia/">Malaysia Python User Group</a></li>
 	<li><a href="http://hack.weekend.my/">Hackweekend</a></li>
 	<li><a href="https://www.facebook.com/groups/248687618521952/">WCKL Co-Working Heroes</a></li>
 	<li><a href="https://sea.dosomething.gd">Social Enterprise Alliance Malaysia</a></li>
