--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@ h1{
 	<li><a href="http://www.facebook.com/groups/ixdakl/">IxDA Kuala Lumpur</a></li>
 	<li><a href="http://www.facebook.com/groups/klmug/">Kuala Lumpur Mongo User Group</a></li>
 	<li><a href="http://www.facebook.com/groups/drupalmy/">Drupal Malaysia</a></li>
+	<li><a href="https://www.facebook.com/groups/bigdatamy/">Big Data Malaysia</a></li>
 </ul>
 </section>
 
